tests/neg-custom-args/captures/lazylist.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylist.scala:35:29 -------------------------------------
35 |  val ref1c: LazyList[Int] = ref1 // error
   |                             ^^^^
   |                Found:    (ref1 : lazylists.LazyCons[Int]{val xs: () ->{cap1} lazylists.LazyList[Int]^?}^{cap1})
   |                Required: lazylists.LazyList[Int]
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylist.scala:37:36 -------------------------------------
37 |  val ref2c: LazyList[Int]^{ref1} = ref2 // error
   |                                    ^^^^
   |                                    Found:    (ref2 : lazylists.LazyList[Int]^{cap2, ref1})
   |                                    Required: lazylists.LazyList[Int]^{ref1}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylist.scala:39:36 -------------------------------------
39 |  val ref3c: LazyList[Int]^{cap2} = ref3 // error
   |                                    ^^^^
   |                                    Found:    (ref3 : lazylists.LazyList[Int]^{cap2, ref1})
   |                                    Required: lazylists.LazyList[Int]^{cap2}
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylist.scala:41:48 -------------------------------------
41 |  val ref4c: LazyList[Int]^{cap1, ref3, cap3} = ref4 // error
   |                                                ^^^^
   |                                             Found:    (ref4 : lazylists.LazyList[Int]^{cap3, cap2, ref1, cap1})
   |                                             Required: lazylists.LazyList[Int]^{cap1, ref3, cap3}
   |
   | longer explanation available when compiling with `-explain`
-- [E164] Declaration Error: tests/neg-custom-args/captures/lazylist.scala:17:6 ----------------------------------------
17 |  def tail = xs() // error // error
   |      ^
   |      error overriding method tail in class LazyList of type -> lazylists.LazyList[T];
   |        method tail of type -> lazylists.LazyList[box T^?]^{LazyCons.this.xs} has incompatible type
   |
   | longer explanation available when compiling with `-explain`
-- [E164] Declaration Error: tests/neg-custom-args/captures/lazylist.scala:22:6 ----------------------------------------
22 |  def tail: LazyList[Nothing]^ = ???  // error overriding
   |      ^
   |      error overriding method tail in class LazyList of type -> lazylists.LazyList[Nothing];
   |        method tail of type -> lazylists.LazyList[Nothing]^ has incompatible type
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/lazylist.scala:17:15 -------------------------------------
17 |  def tail = xs() // error // error
   |             ^^^^
   |             Found:    lazylists.LazyList[T]^{LazyCons.this.xs}
   |             Required: lazylists.LazyList[T]
   |
   |             Note that the expected type lazylists.LazyList[T]
   |             is the previously inferred result type of method tail
   |             which is also the type seen in separately compiled sources.
   |             The new inferred type lazylists.LazyList[T]^{LazyCons.this.xs}
   |             must conform to this type.
   |
   | longer explanation available when compiling with `-explain`
